# DataAnalysisAgent

./: .dockerignore  .example.env  .gitignore  Dockerfile  Makefile  README.md  cli.py  compose.yaml  pyproject.toml
data/: retail.csv
src/: config.py  context.py  errors.py  guardrails.py  llm_client.py  memory.py  orchestrator.py  presentation.py  prompts.py  schemas.py
src/agents/: agent.py  clarification.py  critic.py  insight.py  planner.py
src/tools/: code_executor.py  csv_profiler.py
tests/: test_agent.py  test_cli.py  test_context.py  test_critic.py  test_memory.py  test_presentation.py
