[project]
name = "ensemble-assignment-data-analysis"
version = "0.1.0"
description = "Multi-agent conversational CSV analysis with safe code execution and persistent memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.46.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
